@@ -27,3 +27,9 @@
     work correctly.
 
     Corrected in Shorewall 4.4.2.3.
+
+5)  Global IP configuration variables are not being set in IPv6
+    configurations. This could cause 'shorewall6 start' to fail.
+
+    Corrected in Shorewall 4.4.2.4.
+
