@@ -1,6 +1,6 @@
 %define name shorewall6-lite
 %define version 4.4.2
-%define release 3
+%define release 4
 
 Summary: Shoreline Firewall 6 Lite is an ip6tables-based firewall for Linux systems.
 Name: %{name}
@@ -89,6 +89,8 @@ fi
 %doc COPYING changelog.txt releasenotes.txt
 
 %changelog
+* Fri Oct 23 2009 Tom Eastep tom@shorewall.net
+- Updated to 4.4.2-4
 * Tue Oct 13 2009 Tom Eastep tom@shorewall.net
 - Updated to 4.4.2-3
 * Sat Oct 03 2009 Tom Eastep tom@shorewall.net
