@@ -1,4 +1,4 @@
-Shorewall 4.4.2 Patch Release 3.
+Shorewall 4.4.2 Patch Release 4.
 
 ----------------------------------------------------------------------------
                R E L E A S E  4 . 4  H I G H L I G H T S
@@ -168,6 +168,12 @@ Shorewall 4.4.2 Patch Release 3.
     a zone could contain <interface>:0.0.0.0/0 along with other hosts;
     now, if the zone has <interface>:0.0.0.0/0 (even with exclusions),
     then it may have no additional members in /etc/shorewall/hosts.
+
+----------------------------------------------------------------------------
+        P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 2 . 4
+----------------------------------------------------------------------------
+1)  Global IP configuration variables were not being set in IPv6
+    configurations. This could cause 'shorewall6 start' to fail.
 
 ----------------------------------------------------------------------------
         P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 2 . 3
